<resources>
    <string name="app_name">SmartWeather</string>
    <string name="no_photos_found">No photos found</string>
    <string name="retry">Retry</string>

    <string name="menu_ui_mode">Dark Mode</string>

    <string name="hash_id">#%s</string>
    <string name="cta_login">Login</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_signup">Signup</string>
    <string name="or">Or</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="hint_username">Username</string>
    <string name="hint_a_short_bio">A short bio</string>
    <string name="title_upload_profile_picture">Upload profile picture</string>
    <string name="cta_take_photo">Take photo</string>
    <string name="cta_take_from_library">Take from library</string>

    <!--  Error  -->
    <string name="error_empty_email">The email can\'t be empty</string>
    <string name="error_empty_password">The password can\'t be empty</string>
    <string name="error_empty_user_name">The username can\'t be empty</string>
    <string name="error_empty_bio">The bio can\'t be empty</string>
    <string name="error_empty_confirm_password">The confirm password can\'t be empty</string>
    <string name="error_not_valid_email">The email isn\'t valid</string>
    <string name="error_not_valid_confirm_password">Confirm password should be same as password</string>
    <string name="error_not_valid_profile">Please upload a profile picture</string>
    <string name="error_not_valid_password">
        Password must contain at least 6 characters, one uppercase, one lowercase letter with a digit and special symbol
    </string>
    <string name="error_something_went_wrong">Something went wrong</string>
    <string name="menu_more">More</string>
    <string name="cta_log_out">Log out</string>
    <string name="enter_a_city_name">Enter a city name</string>
    <string name="tv_date">Date:</string>
    <string name="tv_time">Time:</string>
    <string name="tv_humidity">Humidity:</string>
    <string name="tv_temp">Temp:</string>
    <string name="temp_val">Temp:</string>
    <string name="humidity_val">%1$s%%</string>
    <string name="temperature_val">%1$s°C</string>
    <string name="tv_wind">Wind:</string>
    <string name="tv_main_title">Main title:</string>
    <string name="tv_description">Description:</string>
</resources>