<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:scrollbars="none"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/layoutProfilePicture"
            layout="@layout/layout_image"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail"
            style="@style/InputBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20dp"
            android:layout_marginVertical="@dimen/_10dp"
            android:hint="@string/hint_email"
            android:nextFocusDown="@id/etPassword"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:lines="1"
                android:maxLines="1"
                android:inputType="textEmailAddress"
                android:textColor="@color/primary_hint"
                android:imeOptions="actionNext"
                android:textCursorDrawable="@null"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            style="@style/InputBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20dp"
            android:layout_marginVertical="@dimen/_10dp"
            android:hint="@string/hint_password"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:fontFamily="@font/poppins_regular"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/primary_hint"
                android:imeOptions="actionNext"
                android:textCursorDrawable="@null"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilConfirmPassword"
            style="@style/InputBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20dp"
            android:layout_marginVertical="@dimen/_10dp"
            android:hint="@string/hint_confirm_password"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etConfirmPassword"
                android:layout_width="match_parent"
                android:fontFamily="@font/poppins_regular"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/primary_hint"
                android:imeOptions="actionNext"
                android:textCursorDrawable="@null"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilUsername"
            style="@style/InputBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20dp"
            android:layout_marginVertical="@dimen/_10dp"
            android:hint="@string/hint_username"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:fontFamily="@font/poppins_regular"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/primary_hint"
                android:imeOptions="actionNext"
                android:textCursorDrawable="@null"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilBio"
            style="@style/InputBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20dp"
            android:layout_marginVertical="@dimen/_10dp"
            android:hint="@string/hint_a_short_bio"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etBio"
                android:layout_width="match_parent"
                android:fontFamily="@font/poppins_regular"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLines="1"
                android:textColor="@color/primary_hint"
                android:imeOptions="actionDone"
                android:textCursorDrawable="@null"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSignup"
            style="@style/ButtonStyle"
            android:layout_width="@dimen/_150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins_medium"
            android:paddingVertical="@dimen/_10dp"
            android:text="@string/btn_signup"
            android:layout_marginTop="@dimen/_30dp"
            android:textColor="@color/primary_txt" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvOr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textSize="@dimen/_15sp"
            android:layout_gravity="center"
            android:textColor="@color/primary_hint"
            android:layout_margin="@dimen/_15dp"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            style="@style/ButtonStyle"
            android:layout_width="@dimen/_150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins_medium"
            android:paddingVertical="@dimen/_10dp"
            android:text="@string/cta_login"
            android:textColor="@color/primary_txt"
            android:layout_marginBottom="@dimen/_20dp"
            />

    </LinearLayout>

</ScrollView>
