<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardCornerRadius="@dimen/_50dp"
        app:cardElevation="@dimen/_30dp"
        android:layout_marginTop="@dimen/_30dp"
        android:layout_marginBottom="@dimen/_10dp"
        >

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_launcher"
            />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        style="@style/InputBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20dp"
        android:layout_marginVertical="@dimen/_10dp"
        android:hint="@string/hint_email"
        app:errorIconDrawable="@null"
        android:nextFocusDown="@id/etPassword"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:lines="1"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:textColor="@color/primary_hint"
            android:imeOptions="actionNext"
            android:textCursorDrawable="@null"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        style="@style/InputBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20dp"
        android:layout_marginVertical="@dimen/_10dp"
        android:hint="@string/hint_password"
        app:passwordToggleEnabled="true"
        app:errorIconDrawable="@null"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:fontFamily="@font/poppins_regular"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/primary_hint"
            android:imeOptions="actionDone"
            android:textCursorDrawable="@null"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        style="@style/ButtonStyle"
        android:layout_width="@dimen/_150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/poppins_medium"
        android:layout_marginTop="@dimen/_30dp"
        android:paddingVertical="@dimen/_10dp"
        android:text="@string/cta_login"
        android:textColor="@color/primary_txt" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textSize="@dimen/_15sp"
        android:layout_gravity="center"
        android:textColor="@color/primary_hint"
        android:layout_margin="@dimen/_15dp"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignup"
        style="@style/ButtonStyle"
        android:layout_width="@dimen/_150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/poppins_medium"
        android:paddingVertical="@dimen/_10dp"
        android:text="@string/btn_signup"
        android:textColor="@color/primary_txt" />

</LinearLayout>