<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_25dp"
    android:hapticFeedbackEnabled="true"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_upload_profile_picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/viewPick"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_4dp"
        android:layout_marginHorizontal="@dimen/_5dp"
        android:layout_marginTop="@dimen/_25dp"
        android:background="@color/dark"
        android:elevation="@dimen/_5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvCamera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_4dp"
        android:layout_marginTop="@dimen/_30dp"
        android:layout_marginBottom="@dimen/_330dp"
        android:drawableStart="@drawable/ic_camera"
        android:drawablePadding="@dimen/_20dp"
        android:text="@string/cta_take_photo"
        android:textSize="@dimen/_16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewPick" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvPhotoLibrary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_4dp"
        android:layout_marginTop="@dimen/_28dp"
        android:layout_marginBottom="@dimen/_28dp"
        android:drawableStart="@drawable/ic_library"
        android:drawablePadding="@dimen/_20dp"
        android:text="@string/cta_take_from_library"
        android:textSize="@dimen/_16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCamera" />
</androidx.constraintlayout.widget.ConstraintLayout>