<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="@dimen/_10dp"
    app:strokeColor="@color/primary_hint"
    app:cardCornerRadius="@dimen/_20dp"
    android:layout_marginHorizontal="@dimen/_10dp"
    android:layout_marginTop="@dimen/_10dp"
    android:layout_marginBottom="@dimen/_20dp"
    app:cardElevation="@dimen/_20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5dp"
            android:textSize="@dimen/_14sp"
            android:padding="@dimen/_5dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/tv_date"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/primary_hint" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDateVal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5dp"
            android:textSize="@dimen/_14sp"
            android:padding="@dimen/_5dp"
            android:fontFamily="@font/poppins_regular"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvDate"
            android:textColor="@color/primary_hint" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5dp"
            android:textSize="@dimen/_14sp"
            android:padding="@dimen/_5dp"
            app:layout_constraintTop_toBottomOf="@+id/tvDate"
            app:layout_constraintStart_toStartOf="parent"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/tv_time"
            android:textColor="@color/primary_hint" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTimeVal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5dp"
            android:textSize="@dimen/_14sp"
            android:padding="@dimen/_5dp"
            app:layout_constraintTop_toBottomOf="@+id/tvDate"
            app:layout_constraintStart_toEndOf="@+id/tvTime"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/primary_hint" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvHumidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5dp"
            android:textSize="@dimen/_14sp"
            android:padding="@dimen/_5dp"
            app:layout_constraintTop_toBottomOf="@+id/tvTime"
            app:layout_constraintStart_toStartOf="parent"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/tv_humidity"
            android:textColor="@color/primary_hint" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvHumidityVal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5dp"
            android:textSize="@dimen/_14sp"
            android:padding="@dimen/_5dp"
            app:layout_constraintTop_toBottomOf="@+id/tvTime"
            app:layout_constraintStart_toEndOf="@+id/tvHumidity"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/primary_hint" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5dp"
            android:textSize="@dimen/_14sp"
            android:padding="@dimen/_5dp"
            app:layout_constraintTop_toBottomOf="@+id/tvHumidity"
            app:layout_constraintStart_toStartOf="parent"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/tv_temp"
            android:textColor="@color/primary_hint" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTempVal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5dp"
            android:textSize="@dimen/_14sp"
            android:padding="@dimen/_5dp"
            app:layout_constraintTop_toBottomOf="@+id/tvHumidity"
            app:layout_constraintStart_toEndOf="@+id/tvTemp"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/primary_hint" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
